# agentic-coding-workflow

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_GUIDELINES.md  DIAGRAMS.md  DOCUMENTATION.md  DOCUMENTATION_GUIDELINES.md  DOCUMENTATION_MAP.md  LICENSE  README.md  REQUIREMENTS.md  SECURITY.md  TESTING.md  TESTING_GUIDELINES.md  alembic.ini  config.example.yaml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/agents/: architecture-planner.md  code-documentator.md  code-executor.md  code-implementer.md  code-quality-enforcer.md  integration-test-implementor.md  task-implementer.md  test-implementor.md
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20250818_2311_b6a2d6a86874_create_core_database_schema.py
config/examples/: development.yaml  production.yaml  staging.yaml  testing.yaml
docs/: database-schema.md  testing-mock-github-server.md  troubleshooting-hub.md
docs/api/: README.md  configuration-api.md  database-api.md  github-client.md  pr-discovery.md  pr-monitoring-api.md  webhooks.md  worker-interfaces.md
docs/config/: README.md  getting-started.md  reference.md  security.md  tools.md  troubleshooting.md
docs/developer/: README.md  architecture.md  best-practices.md  code-review.md  debugging.md  local-development.md  onboarding.md  pr-discovery-performance.md  pr-monitoring-guide.md  testing-guide.md
docs/diagrams/: README.md
docs/getting-started/: README.md  first-deployment.md  installation.md
docs/reference/: README.md
docs/testing/: README.md  best-practices.md  coverage.md  database-testing.md  methodology.md  pr-monitoring-testing.md  quality-metrics.md  troubleshooting.md
docs/user-guide/: README.md  configuration.md  monitoring.md  troubleshooting.md
scratch-pad/: implementation-plan.md  tasks.md
scratch-pad/tasks/: task-2-core-processor.md  task-3-pr-discovery.md  task-4-check-run-discovery.md  task-5-change-detection.md  task-6-database-sync.md  task-7-integration.md  task-8-testing.md
src/: __init__.py
src/cache/: __init__.py  base.py  cache_manager.py  decorators.py  memory_cache.py  redis_cache.py
src/config/: README.md  __init__.py  cache.py  exceptions.py  loader.py  manager.py  metrics.py  models.py  utils.py  validation.py
src/database/: __init__.py  config.py  connection.py  health.py  transactions.py
src/github/: __init__.py  auth.py  client.py  exceptions.py  pagination.py  rate_limiting.py
src/models/: __init__.py  analysis_result.py  base.py  check_run.py  enums.py  fix_attempt.py  pull_request.py  repository.py  review.py  state_history.py
src/performance/: __init__.py  connection_pool.py  indexes.py  monitoring.py  optimizations.py
src/repositories/: __init__.py  base.py  bulk_operations.py  check_run.py  pull_request.py  repository.py  state_history.py
src/workers/: __init__.py  pr_monitor_worker.py
tests/: __init__.py  conftest.py
tests/integration/: test_database_fixtures.py  test_database_migration.py  (+2 more)
(+120 files in other folders)
